# libipcalc

./: .gitignore  .travis.yml  Changes  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen  common.h  configure  configure.ac  debbuild-sh  ip2long.c  ipcalc-config.h.in  ipcalc.c  ipcalc.h  ipcalc.pc.in  libipcalc.spec.in
debian/: changelog  control  copyright  ipcalc.dirs  ipcalc.install  libipcalc-dev.dirs  libipcalc-dev.install  libipcalc-utils.dirs  libipcalc-utils.install  rules
debian/patches/: 01-remove-rpath.patch
m4/: ax_compat_option.m4  ipcalc.m4.in
man/: Makefile.am  Makefile.in  broadcast.3  guess_netmask.3  ip2long.1  ip2long.3  is_ipv4.3  long2ip.3  long2prefix.3  netcalc.1  network.3  prefix2long.3  valid_ip_address.3
man/ko/: broadcast.3  guess_netmask.3  ip2long.1  ip2long.3  is_ipv4.3  long2ip.3  long2prefix.3  netcalc.1  network.3  prefix2long.3  valid_ip_address.3
project/: ip2long.cbp  libipcalc.cbp  libipcalc.workspace  netcalc.cbp
scripts/: Makefile.am  Makefile.in  ipcalc-config.in
tags/1.0.0/: README  configure  ipcalc-config.h.in  ipcalc.c
tags/1.0.0/man/: guess_netmask.3  long2ip.3  prefix2long.3
tags/1.0.1/: ipcalc-config.in  ipcalc.h  netcalc.c  util.h
tags/1.0.1/debian/: copyright
tags/1.0.1/man/: ip2long.1  ip2long.3  network.3  prefix2long.3
tags/1.0.1/man/ko/: netcalc.1  valid_ip_address.3
tags/1.0.2/: Makefile.am  README  aclocal.m4  ipcalc-config.h.in  libipcalc.spec
tags/1.0.2/debian/: libipcalc-dev.dirs
tags/1.0.2/m4/: ipcalc.m4  ipcalc.m4.in
tags/1.0.2/man/: Makefile.am  Makefile.in  broadcast.3
tags/1.0.2/man/ko/: ip2long.3
tags/1.0.2/scripts/: Makefile.in  ipcalc.pc.in
tags/1.0.2/utils/: Makefile.am  Makefile.in  netcalc.c  util.h
tags/RELEASE_1_0_0/: Changes
tags/RELEASE_1_0_0/man/: ip2long.3  valid_ip_address.3
tags/RELEASE_1_0_1/: acconfig.h  configure
tags/RELEASE_1_0_1/debian/: control
tags/RELEASE_1_0_1/man/: guess_netmask.3
tags/RELEASE_1_0_1/man/ko/: guess_netmask.3  ip2long.1  network.3
test/: Makefile.am  Makefile.in  guess.c  ip2long.c  is_ipv4.c  network.c  prefix_conv.c
trunk/: Changes  Makefile.am  Makefile.in  acconfig.h  aclocal.m4  autogen  common.h  configure  configure.ac  debbuild-sh  ip2long.c  ipcalc-config.h.in  ipcalc.h  ipcalc.pc.in  libipcalc.spec  libipcalc.spec.in  util.h
trunk/debian/: changelog  control  postinst  postrm  rules
trunk/debian/patches/: 01-remove-rpath.patch
trunk/m4/: ipcalc.m4.in
trunk/man/: Makefile.in  broadcast.3  ip2long.1  long2ip.3  long2prefix.3  netcalc.1
trunk/man/ko/: prefix2long.3
trunk/project/: ip2long.cbp  library.cbp  netcalc.cbp
trunk/scripts/: Makefile.am  Makefile.in  ipcalc-config.in
trunk/test/: Makefile.in  ip2long.c
trunk/utils/: Makefile.in  ip2long.c  netcalc.c  util.h
utils/: Makefile.am  Makefile.in  ip2long.c  netcalc.c  util.h
